--- a/.github/workflows/webpack-build.yml
+++ b/.github/workflows/webpack-build.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm ci
 
       - name: Build 📦
-        run: npm run build-github
+        run: npm run build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
