--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-   "name": "finister-radio-client",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "start": "webpack serve --config webpack.dev.js",
-      "dev": "webpack --config webpack.dev.js",
-      "build": "webpack --config webpack.prod.js"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "axios": "^1.7.3"
-   },
-   "devDependencies": {
-      "@babel/core": "^7.25.2",
-      "@babel/preset-env": "^7.25.3",
-      "babel-loader": "^9.1.3",
-      "css-loader": "^6.11.0",
-      "css-minimizer-webpack-plugin": "^5.0.1",
-      "html-webpack-plugin": "^5.6.0",
-      "mini-css-extract-plugin": "^2.9.0",
-      "sass": "^1.77.8",
-      "sass-loader": "^13.3.3",
-      "terser-webpack-plugin": "^5.3.10",
-      "webpack": "^5.93.0",
-      "webpack-bundle-analyzer": "^4.10.2",
-      "webpack-cli": "^5.1.4",
-      "webpack-dev-server": "^4.15.2"
-   }
+  "name": "finister-radio-client",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --config webpack.dev.js",
+    "dev": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "prettier": "npx prettier . --write",
+    "prettier-check": "npx prettier . --check"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.11.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "prettier": "^3.3.3",
+    "sass": "^1.77.8",
+    "sass-loader": "^13.3.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.93.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
+  }
 }
